--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.7",
+    "@tailwindcss/line-clamp": "^0.4.4",
+    "axios": "^1.6.7",
+    "framer-motion": "^10.16.4",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.19.0",
-    "react-masonry-css": "^1.0.16",
     "react-hook-form": "^7.48.2",
-    "framer-motion": "^10.16.4",
-    "axios": "^1.6.7"
+    "react-masonry-css": "^1.0.16",
+    "react-router-dom": "^6.19.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
