--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.48.2",
+    "react-image-crop": "^11.0.10",
     "react-masonry-css": "^1.0.16",
     "react-router-dom": "^6.19.0"
   },
