--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@supabase/supabase-js": "^2.39.7",
     "@tailwindcss/line-clamp": "^0.4.4",
     "axios": "^1.6.7",
+    "clsx": "^2.1.1",
     "framer-motion": "^10.16.4",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
@@ -20,7 +21,8 @@
     "react-hook-form": "^7.48.2",
     "react-image-crop": "^11.0.10",
     "react-masonry-css": "^1.0.16",
-    "react-router-dom": "^6.19.0"
+    "react-router-dom": "^6.19.0",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
